crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__set__comprehension.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/set/comprehension.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..327,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 17..31,
                    value: SetComp(
                        ExprSetComp {
                            node_index: NodeIndex(None),
                            range: 17..31,
                            elt: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 18..19,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            generators: [
                                Comprehension {
                                    range: 20..30,
                                    node_index: NodeIndex(None),
                                    target: NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(None),
                                            range: 24..25,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                    iter: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 29..30,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                    ifs: [],
                                    is_async: false,
                                },
                            ],
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 32..48,
                    value: SetComp(
                        ExprSetComp {
                            node_index: NodeIndex(None),
                            range: 32..48,
                            elt: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 33..34,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            generators: [
                                Comprehension {
                                    range: 35..47,
                                    node_index: NodeIndex(None),
                                    target: StringLiteral(
                                        ExprStringLiteral {
                                            node_index: NodeIndex(None),
                                            range: 39..42,
                                            value: StringLiteralValue {
                                                inner: Single(
                                                    StringLiteral {
                                                        range: 39..42,
                                                        node_index: NodeIndex(None),
                                                        value: "a",
                                                        flags: StringLiteralFlags {
                                                            quote_style: Single,
                                                            prefix: Empty,
                                                            triple_quoted: false,
                                                            unclosed: false,
                                                        },
                                                    },
                                                ),
                                            },
                                        },
                                    ),
                                    iter: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 46..47,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                    ifs: [],
                                    is_async: false,
                                },
                            ],
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 49..68,
                    value: SetComp(
                        ExprSetComp {
                            node_index: NodeIndex(None),
                            range: 49..68,
                            elt: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 50..51,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            generators: [
                                Comprehension {
                                    range: 52..67,
                                    node_index: NodeIndex(None),
                                    target: Call(
                                        ExprCall {
                                            node_index: NodeIndex(None),
                                            range: 56..62,
                                            func: Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 56..60,
                                                    id: Name("call"),
                                                    ctx: Load,
                                                },
                                            ),
                                            arguments: Arguments {
                                                range: 60..62,
                                                node_index: NodeIndex(None),
                                                args: [],
                                                keywords: [],
                                            },
                                        },
                                    ),
                                    iter: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 66..67,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                    ifs: [],
                                    is_async: false,
                                },
                            ],
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 69..88,
                    value: SetComp(
                        ExprSetComp {
                            node_index: NodeIndex(None),
                            range: 69..88,
                            elt: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 70..71,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            generators: [
                                Comprehension {
                                    range: 72..87,
                                    node_index: NodeIndex(None),
                                    target: Set(
                                        ExprSet {
                                            node_index: NodeIndex(None),
                                            range: 76..82,
                                            elts: [
                                                Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 77..78,
                                                        id: Name("a"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 80..81,
                                                        id: Name("b"),
                                                        ctx: Load,
                                                    },
                                                ),
                                            ],
                                        },
                                    ),
                                    iter: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 86..87,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                    ifs: [],
                                    is_async: false,
                                },
                            ],
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 105..120,
                    value: SetComp(
                        ExprSetComp {
                            node_index: NodeIndex(None),
                            range: 105..120,
                            elt: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 106..107,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            generators: [
                                Comprehension {
                                    range: 108..119,
                                    node_index: NodeIndex(None),
                                    target: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 112..113,
                                            id: Name("x"),
                                            ctx: Store,
                                        },
                                    ),
                                    iter: Starred(
                                        ExprStarred {
                                            node_index: NodeIndex(None),
                                            range: 117..119,
                                            value: Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 118..119,
                                                    id: Name("y"),
                                                    ctx: Load,
                                                },
                                            ),
                                            ctx: Load,
                                        },
                                    ),
                                    ifs: [],
                                    is_async: false,
                                },
                            ],
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 121..141,
                    value: SetComp(
                        ExprSetComp {
                            node_index: NodeIndex(None),
                            range: 121..141,
                            elt: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 122..123,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            generators: [
                                Comprehension {
                                    range: 124..140,
                                    node_index: NodeIndex(None),
                                    target: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 128..129,
                                            id: Name("x"),
                                            ctx: Store,
                                        },
                                    ),
                                    iter: Yield(
                                        ExprYield {
                                            node_index: NodeIndex(None),
                                            range: 133..140,
                                            value: Some(
                                                Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 139..140,
                                                        id: Name("y"),
                                                        ctx: Load,
                                                    },
                                                ),
                                            ),
                                        },
                                    ),
                                    ifs: [],
                                    is_async: false,
                                },
                            ],
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 142..167,
                    value: SetComp(
                        ExprSetComp {
                            node_index: NodeIndex(None),
                            range: 142..167,
                            elt: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 143..144,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            generators: [
                                Comprehension {
                                    range: 145..166,
                                    node_index: NodeIndex(None),
                                    target: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 149..150,
                                            id: Name("x"),
                                            ctx: Store,
                                        },
                                    ),
                                    iter: YieldFrom(
                                        ExprYieldFrom {
                                            node_index: NodeIndex(None),
                                            range: 154..166,
                                            value: Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 165..166,
                                                    id: Name("y"),
                                                    ctx: Load,
                                                },
                                            ),
                                        },
                                    ),
                                    ifs: [],
                                    is_async: false,
                                },
                            ],
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 168..192,
                    value: SetComp(
                        ExprSetComp {
                            node_index: NodeIndex(None),
                            range: 168..192,
                            elt: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 169..170,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            generators: [
                                Comprehension {
                                    range: 171..191,
                                    node_index: NodeIndex(None),
                                    target: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 175..176,
                                            id: Name("x"),
                                            ctx: Store,
                                        },
                                    ),
                                    iter: Lambda(
                                        ExprLambda {
                                            node_index: NodeIndex(None),
                                            range: 180..191,
                                            parameters: Some(
                                                Parameters {
                                                    range: 187..188,
                                                    node_index: NodeIndex(None),
                                                    posonlyargs: [],
                                                    args: [
                                                        ParameterWithDefault {
                                                            range: 187..188,
                                                            node_index: NodeIndex(None),
                                                            parameter: Parameter {
                                                                range: 187..188,
                                                                node_index: NodeIndex(None),
                                                                name: Identifier {
                                                                    id: Name("y"),
                                                                    range: 187..188,
                                                                    node_index: NodeIndex(None),
                                                                },
                                                                annotation: None,
                                                            },
                                                            default: None,
                                                        },
                                                    ],
                                                    vararg: None,
                                                    kwonlyargs: [],
                                                    kwarg: None,
                                                },
                                            ),
                                            body: Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 190..191,
                                                    id: Name("y"),
                                                    ctx: Load,
                                                },
                                            ),
                                        },
                                    ),
                                    ifs: [],
                                    is_async: false,
                                },
                            ],
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 207..230,
                    value: SetComp(
                        ExprSetComp {
                            node_index: NodeIndex(None),
                            range: 207..230,
                            elt: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 208..209,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            generators: [
                                Comprehension {
                                    range: 210..229,
                                    node_index: NodeIndex(None),
                                    target: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 214..215,
                                            id: Name("x"),
                                            ctx: Store,
                                        },
                                    ),
                                    iter: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 219..223,
                                            id: Name("data"),
                                            ctx: Load,
                                        },
                                    ),
                                    ifs: [
                                        Starred(
                                            ExprStarred {
                                                node_index: NodeIndex(None),
                                                range: 227..229,
                                                value: Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 228..229,
                                                        id: Name("y"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                ctx: Load,
                                            },
                                        ),
                                    ],
                                    is_async: false,
                                },
                            ],
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 231..259,
                    value: SetComp(
                        ExprSetComp {
                            node_index: NodeIndex(None),
                            range: 231..259,
                            elt: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 232..233,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            generators: [
                                Comprehension {
                                    range: 234..258,
                                    node_index: NodeIndex(None),
                                    target: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 238..239,
                                            id: Name("x"),
                                            ctx: Store,
                                        },
                                    ),
                                    iter: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 243..247,
                                            id: Name("data"),
                                            ctx: Load,
                                        },
                                    ),
                                    ifs: [
                                        Yield(
                                            ExprYield {
                                                node_index: NodeIndex(None),
                                                range: 251..258,
                                                value: Some(
                                                    Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 257..258,
                                                            id: Name("y"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                    ],
                                    is_async: false,
                                },
                            ],
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 260..293,
                    value: SetComp(
                        ExprSetComp {
                            node_index: NodeIndex(None),
                            range: 260..293,
                            elt: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 261..262,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            generators: [
                                Comprehension {
                                    range: 263..292,
                                    node_index: NodeIndex(None),
                                    target: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 267..268,
                                            id: Name("x"),
                                            ctx: Store,
                                        },
                                    ),
                                    iter: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 272..276,
                                            id: Name("data"),
                                            ctx: Load,
                                        },
                                    ),
                                    ifs: [
                                        YieldFrom(
                                            ExprYieldFrom {
                                                node_index: NodeIndex(None),
                                                range: 280..292,
                                                value: Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 291..292,
                                                        id: Name("y"),
                                                        ctx: Load,
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                    is_async: false,
                                },
                            ],
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 294..326,
                    value: SetComp(
                        ExprSetComp {
                            node_index: NodeIndex(None),
                            range: 294..326,
                            elt: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 295..296,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            generators: [
                                Comprehension {
                                    range: 297..325,
                                    node_index: NodeIndex(None),
                                    target: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 301..302,
                                            id: Name("x"),
                                            ctx: Store,
                                        },
                                    ),
                                    iter: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 306..310,
                                            id: Name("data"),
                                            ctx: Load,
                                        },
                                    ),
                                    ifs: [
                                        Lambda(
                                            ExprLambda {
                                                node_index: NodeIndex(None),
                                                range: 314..325,
                                                parameters: Some(
                                                    Parameters {
                                                        range: 321..322,
                                                        node_index: NodeIndex(None),
                                                        posonlyargs: [],
                                                        args: [
                                                            ParameterWithDefault {
                                                                range: 321..322,
                                                                node_index: NodeIndex(None),
                                                                parameter: Parameter {
                                                                    range: 321..322,
                                                                    node_index: NodeIndex(None),
                                                                    name: Identifier {
                                                                        id: Name("y"),
                                                                        range: 321..322,
                                                                        node_index: NodeIndex(None),
                                                                    },
                                                                    annotation: None,
                                                                },
                                                                default: None,
                                                            },
                                                        ],
                                                        vararg: None,
                                                        kwonlyargs: [],
                                                        kwarg: None,
                                                    },
                                                ),
                                                body: Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 324..325,
                                                        id: Name("y"),
                                                        ctx: Load,
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                    is_async: false,
                                },
                            ],
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # Invalid target
2 | {x for 1 in y}
  |        ^ Syntax Error: Invalid assignment target
3 | {x for 'a' in y}
4 | {x for call() in y}
  |


  |
1 | # Invalid target
2 | {x for 1 in y}
3 | {x for 'a' in y}
  |        ^^^ Syntax Error: Invalid assignment target
4 | {x for call() in y}
5 | {x for {a, b} in y}
  |


  |
2 | {x for 1 in y}
3 | {x for 'a' in y}
4 | {x for call() in y}
  |        ^^^^^^ Syntax Error: Invalid assignment target
5 | {x for {a, b} in y}
  |


  |
3 | {x for 'a' in y}
4 | {x for call() in y}
5 | {x for {a, b} in y}
  |        ^^^^^^ Syntax Error: Invalid assignment target
6 |
7 | # Invalid iter
  |


   |
 7 | # Invalid iter
 8 | {x for x in *y}
   |             ^^ Syntax Error: Starred expression cannot be used here
 9 | {x for x in yield y}
10 | {x for x in yield from y}
   |


   |
 7 | # Invalid iter
 8 | {x for x in *y}
 9 | {x for x in yield y}
   |             ^^^^^^^ Syntax Error: Yield expression cannot be used here
10 | {x for x in yield from y}
11 | {x for x in lambda y: y}
   |


   |
 8 | {x for x in *y}
 9 | {x for x in yield y}
10 | {x for x in yield from y}
   |             ^^^^^^^^^^^^ Syntax Error: Yield expression cannot be used here
11 | {x for x in lambda y: y}
   |


   |
 9 | {x for x in yield y}
10 | {x for x in yield from y}
11 | {x for x in lambda y: y}
   |             ^^^^^^^^^^^ Syntax Error: Lambda expression cannot be used here
12 |
13 | # Invalid if
   |


   |
13 | # Invalid if
14 | {x for x in data if *y}
   |                     ^^ Syntax Error: Starred expression cannot be used here
15 | {x for x in data if yield y}
16 | {x for x in data if yield from y}
   |


   |
13 | # Invalid if
14 | {x for x in data if *y}
15 | {x for x in data if yield y}
   |                     ^^^^^^^ Syntax Error: Yield expression cannot be used here
16 | {x for x in data if yield from y}
17 | {x for x in data if lambda y: y}
   |


   |
14 | {x for x in data if *y}
15 | {x for x in data if yield y}
16 | {x for x in data if yield from y}
   |                     ^^^^^^^^^^^^ Syntax Error: Yield expression cannot be used here
17 | {x for x in data if lambda y: y}
   |


   |
15 | {x for x in data if yield y}
16 | {x for x in data if yield from y}
17 | {x for x in data if lambda y: y}
   |                     ^^^^^^^^^^^ Syntax Error: Lambda expression cannot be used here
   |
